Add quit, profile and play buttons, header and footer to all views

--- a/app/style/modules/_base.scss
+++ b/app/style/modules/_base.scss
@@ -1,8 +1,17 @@
 html {
   background-color: $background-color-dark;
+  height: 100%;
 }
 body {
   font-family: $main-font-regular;
+  height: 100%;
+}
+main {
+  min-height: 100%;
+  position: relative;
+}
+.last-content {
+  padding-bottom: 5em;
 }
 h1 {
   font-size: 200%;
