--- a/app/templates/views/home_view.html
+++ b/app/templates/views/home_view.html
@@ -1,16 +1,24 @@
-<section class="component">
-  <h1 class="notes">Category list:</h1>
+<header>
+  <h1 class="icon-avatar-bw">TriviApp</h1>
+  <figure><img src="imgs/avatar6.svg"><figcaption>username</figcaption></figure>
+</header>
+<section class="component last-content">
   <section class="cat-card">
     <ul>
-      <li class="cat-button">Sports</li>
-      <li class="cat-button">Entertainment</li>
-      <li class="cat-button">History</li>
-      <li class="cat-button">Science</li>
-<!--       <li class="cat-button">Science</li>
-      <li class="cat-button">Star Wars</li>
-      <li class="cat-button">Math</li> -->
+      <li class="big-button">Sports</li>
+      <li class="big-button">Entertainment</li>
+      <li class="big-button">History</li>
+      <li class="big-button">Science</li>
     </ul>
   </section>
-  <a class="logout-button">Log Out</a>
-  <a class="to-profile-button">To Profile</a>
+  <div class="button-wrap">
+    <a class="small-button" href="#/signin">Quit</a>
+    <a class="small-button" href="#/profile">Profile</a>
+  </div>
 </section> 
+<footer>
+  <ul>
+    <li>&copy; Copyright 2015. All Rights Reserved.</li>
+    <li>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</li>
+  </ul>         
+</footer>
