--- a/app/style/modules/_icons.scss
+++ b/app/style/modules/_icons.scss
@@ -13,7 +13,6 @@
 
 %icon-fonts {
   font-family: "icons";
-  // font-size: 1000%;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -24,7 +23,7 @@
   color: $text-color-theme;
 }
 
-$icons: (starbar "\e001") (avatar-bw "\e000") (0stars "\e004") (1star "\e604") (2stars "\e006") (3stars "\e007") (4stars "\e008") (5stars "\e009");
+$icons: (starbar "\e001") (avatar-bw "\e000") (0stars "\e004") (1stars "\e604") (2stars "\e006") (3stars "\e007") (4stars "\e008") (5stars "\e009");
 
 @each $icon in $icons {
   .icon-#{nth($icon, 1)}:before {
