--- a/app/style/partials/_footer.scss
+++ b/app/style/partials/_footer.scss
@@ -1,7 +1,12 @@
 footer {
-  small {
-    @include set-font(rgba($text-color-theme, .5), $main-font-regular, $font-size-small);
-  }
+  @include set-font(rgba($text-color-theme, 0.5), $main-font-regular, $font-size-small);
+  position: absolute;
+  z-index: -1000;
+  bottom: 0;
+  right: 25%;
+  width: 50%;
+  height: 5em;
+  padding-top: 1em;
   ul {
     list-style-type: none;
     text-align: center;
