--- a/app/style/partials/_header.scss
+++ b/app/style/partials/_header.scss
@@ -1,4 +1,5 @@
 header {
+  padding-top: 0.5em;
   h1 {
     @include set-font($text-color-theme, $main-font-regular, $font-size-jumbo, "auto");
     @include flex-container(flex,row,nowrap,center,center,center);
@@ -9,7 +10,8 @@ header {
     margin-bottom: 0.5em;
     img {
       margin-right: 0.5em;
-      width: 8%;
+      width: 10%;
+      max-width: 4em;
       border-radius: 0.25em;
     }
   }
