--- a/app/templates/views/profile_view.html
+++ b/app/templates/views/profile_view.html
@@ -1,49 +1,17 @@
-<article data-ng-controller="ProfileController">
-  <section class="component">
-    <!-- <h1 class="notes">User stat graphic (bottom):</h1> -->
-    <aside class="rating-indicator-container left">
-      <div class="rank-indicator category-sports slide-in-left">
-        <p>Sports</p>
-        <p>{{ rankings }}</p>
-      </div>
-<!--       <div class="rank-indicator category-2 slide-in-down">
-        <p></p>
-        <p></p>
-      </div> -->
-      <div class="rank-indicator category-entertainment slide-in-right">
-        <p>Entertainment</p>
-        <p>{{ rankings }}</p>
-      </div>
-    </aside>
+<header>
+  <h1 class="icon-avatar-bw">TriviApp</h1>
+</header>
+<section data-ng-controller="ProfileController">
+  <section class="player-profile">
+    <h1>TriviApp</h1>
+    <figure><img src="imgs/avatar5.svg"><figcaption>{{user.username}}</figcaption></figure>      
   </section>
-
-  <section class="component">
-    <!-- <h1 class="notes">User profile card:</h1> -->
-    <section class="player-profile">
-      <h1>TriviApp</h1>
-      <figure><img src="temp/avatar5.svg"><figcaption>{{user.username}}</figcaption></figure>      
-      <h3>{{"FIVE"}}</h3>
-      <h3>{{"TIMESTAMP"}}</h3>
-    </section>
-    <a class="play-button">Play Button</a>
-    <a class="logout-button" href="/signin">Log Out</a>
-  </section>
-
-  <section class="component">
-    <!-- <h1 class="notes">User stat graphic (top):</h1> -->
-    <aside class="rating-indicator-container right">
-      <div class="rank-indicator category-history slide-in-left">
-        <p>History</p>
-        <p>{{ rankings }}</p>
-      </div>
-<!--       <div class="rank-indicator category-5 slide-in-up">
-        <p></p>
-        <p></p>
-      </div> -->
-      <div class="rank-indicator category-science slide-in-right">
-        <p>Science</p>
-        <p>{{ rankings }}</p>
-      </div>
-    </aside>
-  </section>
-</article>
+  <a class="big-button" href="#/home">Play Now</a>
+  <a class="small-button" href="#/signin">Quit</a>
+</section>
+<footer>
+  <ul>
+    <li>&copy; Copyright 2015. All Rights Reserved.</li>
+    <li>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</li>
+  </ul>         
+</footer>
