Fix missing star icon code

--- a/app/templates/views/scorecard_view.html
+++ b/app/templates/views/scorecard_view.html
@@ -7,7 +7,7 @@
        data-category-header="categoryName"
       ></div>
   <div class="stars">
-    <span data-ng-class="{'icon-0stars': none, 'icon-1stars': one, 'icon-2stars': two, 'icon-3stars': three, 'icon-4stars': four, 'icon-5stars': five}"></span>
+    <span data-ng-class="{'icon-0stars': gotNone, 'icon-1star': gotOne, 'icon-2stars': gotTwo, 'icon-3stars': gotThree, 'icon-4stars': gotFour, 'icon-5stars': gotFive}"></span>
   </div>
   <p class="score">{{right}} correct of 5</p>
   <ul>
