Added restoreSession method to AuthService

--- a/app/templates/views/home_view.html
+++ b/app/templates/views/home_view.html
@@ -11,6 +11,6 @@
       <li class="cat-button">Math</li> -->
     </ul>
   </section>
-  <a class="logout-button">Log Out</a>
-  <a class="to-profile-button">To Profile</a>
-</section> 
+  <a class="logout-button" data-ng-click="logout()">Log Out</a>
+  <a class="to-profile-button" data-ng-click="viewProfile()">To Profile</a>
+</section>
