add box shadow and tabindex focus to home view elements

--- a/app/templates/views/home_view.html
+++ b/app/templates/views/home_view.html
@@ -1,16 +1,17 @@
 <section class="component">
-  <h1 class="notes">Category list:</h1>
+  <header><h1 class="icon-avatar-bw">TriviApp</h1></header>
+  <!-- <h1 class="notes">Category list:</h1> -->
   <section class="cat-card">
     <ul>
-      <li class="cat-button">Sports</li>
-      <li class="cat-button">Entertainment</li>
-      <li class="cat-button">History</li>
-      <li class="cat-button">Science</li>
+      <li class="cat-button" tabindex="1">Sports</li>
+      <li class="cat-button" tabindex="2">Entertainment</li>
+      <li class="cat-button" tabindex="3">History</li>
+      <li class="cat-button" tabindex="4">Science</li>
 <!--       <li class="cat-button">Science</li>
       <li class="cat-button">Star Wars</li>
       <li class="cat-button">Math</li> -->
     </ul>
   </section>
-  <a class="logout-button">Log Out</a>
-  <a class="to-profile-button">To Profile</a>
+  <a class="logout-button" tabindex="5">Log Out</a>
+  <a class="to-profile-button" tabindex="6">To Profile</a>
 </section> 
