--- a/app/style/partials/buttons/_category-button.scss
+++ b/app/style/partials/buttons/_category-button.scss
@@ -3,4 +3,9 @@
   width: 90%;
   display: block;
   margin: 0.25em auto;
+  &:focus {
+    -webkit-box-shadow: 1px 1px 10px 6px $background-color-theme;
+    -moz-box-shadow: 1px 1px 10px 6px $background-color-theme;
+      box-shadow: 1px 1px 10px 6px $background-color-theme;
+  }  
 }
