--- a/app/templates/views/home_view.html
+++ b/app/templates/views/home_view.html
@@ -6,21 +6,21 @@
   <section class="cat-card">
     <ul>
 
-      <li class="big-button">Sports</li>
-      <li class="big-button">Entertainment</li>
-      <li class="big-button">History</li>
-      <li class="big-button">Science</li>
+      <li class="big-button" data-ng-click="newGame('sports')">Sports</li>
+      <li class="big-button" data-ng-click="newGame('entertainment')">Entertainment</li>
+      <li class="big-button" data-ng-click="newGame('history')">History</li>
+      <li class="big-button" data-ng-click="newGame('science')">Science</li>
 
     </ul>
   </section>
   <div class="button-wrap">
-    <a class="small-button" href="#/signin">Quit</a>
     <a class="small-button" href="#/profile">Profile</a>
+    <a class="small-button" href="#/signin">Quit</a>
   </div>
 </section>
 <footer>
   <ul>
     <li>&copy; Copyright 2015. All Rights Reserved.</li>
-    <li>Molly Kent, Clare Monahan, Will Shull, Monica Wu, Lyle Charles Scott</li>
+    <li>Molly Kent, Clare Monahan, William Shull, Monica Wu, Lyle Charles Scott</li>
   </ul>
 </footer>
