Start setting up timeout function

--- a/app/templates/views/gameplay_view.html
+++ b/app/templates/views/gameplay_view.html
@@ -7,6 +7,7 @@
        data-category-header="categoryName"
        data-question="question"
       ></div>
+  <div class="countdown-timer"></div>
   <div id="answers" class="answers">
     <a data-ng-repeat="answer in answers" data-ng-click="checkAnswer(answer)" class="big-button" data-ng-class="{'chosen': isChosen, 'correct': isCorrect, 'incorrect': isIncorrect, 'animated':isAnimated, 'hinge': runHinge, 'rubberBand':runRubberBand}">{{answer}}</a>
   </div>
