Add animated pie timer

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -8,7 +8,7 @@
 @import "modules/icons.scss";
 @import "modules/button.scss";
 @import "modules/animations.scss";
-
+@import "modules/spinner.scss";
 
 // PARTIALS
 @import "partials/login-screen.scss";
