--- a/app/templates/directives/question_header_template.html
+++ b/app/templates/directives/question_header_template.html
@@ -1,2 +1,7 @@
 <h1>{{categoryHeader}}</h1>
 <h2>{{question}}</h2>
+<div class="timer">
+  <div class="pie spinner"></div>
+  <div class="pie filler"></div>
+  <div class="mask"></div>
+</div>
