--- a/app/templates/views/profile_view.html
+++ b/app/templates/views/profile_view.html
@@ -4,7 +4,7 @@
 <section data-ng-controller="ProfileController">
   <section class="player-profile">
     <h1>TriviApp</h1>
-    <figure><img src="imgs/avatar5.svg"><figcaption>{{user.username}}</figcaption></figure>      
+    <figure><img src="imgs/avatar5.svg"><figcaption data-ng-model="">{{user.username}}</figcaption></figure>
   </section>
   <a class="big-button" href="#/home">Play Now</a>
   <a class="small-button" href="#/signin">Quit</a>
@@ -13,5 +13,5 @@
   <ul>
     <li>&copy; Copyright 2015. All Rights Reserved.</li>
     <li>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</li>
-  </ul>         
+  </ul>
 </footer>
