--- a/app/templates/views/gameplay_view.html
+++ b/app/templates/views/gameplay_view.html
@@ -7,12 +7,11 @@
        data-category-header="categoryName"
        data-question="question"
       ></div>
-  <div id="countdown" class="timer" ng-if="!inBetweenQuestions">
+  <div id="countdown" class="timer" >
     <div class="pie spinner" ng-if="!inBetweenQuestions"></div>
     <div class="pie filler" ng-if="!inBetweenQuestions"></div>
     <div class="mask" ng-if="!inBetweenQuestions"></div>
   </div>
-  <!-- <div class="countdown-timer"></div> -->
   <div id="answers" class="answers">
     <a data-ng-repeat="answer in answers" data-ng-click="checkAnswer(answer)" class="big-button" data-ng-class="{'chosen': isChosen, 'correct': isCorrect, 'incorrect': isIncorrect, 'animated':isAnimated, 'hinge': runHinge, 'rubberBand':runRubberBand}">{{answer}}</a>
   </div>
