Pause to pull Wills changes

--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -24,37 +24,37 @@
         <legend>Select your avatar</legend>
         <ul>
           <li class="slide-in-right">
-            <input name="avatar" type="radio" value="red" data-ng-model="user.avatar"/>
+            <input name="avatar" type="radio" value="imgs/avatar1.svg" data-ng-model="user.avatar"/>
             <label>
               <img src="imgs/avatar1.svg">
             </label>
           </li>
           <li class="slide-in-left">
-            <input name="avatar" type="radio" value="orange" data-ng-model="user.avatar"/>
+            <input name="avatar" type="radio" value="imgs/avatar2.svg" data-ng-model="user.avatar"/>
             <label>
               <img src="imgs/avatar2.svg">
             </label>
           </li>
           <li class="slide-in-right">
-            <input name="avatar" type="radio" value="yellow" data-ng-model="user.avatar"/>
+            <input name="avatar" type="radio" value="imgs/avatar3.svg" data-ng-model="user.avatar"/>
             <label>
               <img src="imgs/avatar3.svg">
             </label>
           </li>
           <li class="slide-in-left">
-            <input name="avatar" type="radio" value="green" data-ng-model="user.avatar"/>
+            <input name="avatar" type="radio" value="imgs/avatar4.svg" data-ng-model="user.avatar"/>
             <label>
               <img src="imgs/avatar4.svg">
             </label>
           </li>
           <li class="slide-in-right">
-            <input name="avatar" type="radio" value="purple" data-ng-model="user.avatar"/>
+            <input name="avatar" type="radio" value="imgs/avatar6.svg" data-ng-model="user.avatar"/>
             <label>
               <img src="imgs/avatar6.svg">
             </label>
           </li>
           <li class="slide-in-left">
-            <input name="avatar" type="radio" value="pink" data-ng-model="user.avatar"/>
+            <input name="avatar" type="radio" value="imgs/avatar7.svg" data-ng-model="user.avatar"/>
             <label>
               <img src="imgs/avatar7.svg">
             </label>
