Hide spiner on timeout

--- a/app/style/partials/_question-card.scss
+++ b/app/style/partials/_question-card.scss
@@ -35,4 +35,7 @@
     background-color: $background-color-wrong;
     border-color: $border-color-wrong;
   }
+  .hidden {
+    visibility: hidden;
+  }
 }
