--- a/app/templates/views/gameplay_view.html
+++ b/app/templates/views/gameplay_view.html
@@ -7,7 +7,7 @@
        data-category-header="categoryName"
        data-question="question"
       ></div>
-  <div class="timer" ng-if="!inBetweenQuestions">
+  <div id="timer" class="timer" ng-if="!inBetweenQuestions">
     <div class="pie spinner" ng-if="!inBetweenQuestions"></div>
     <div class="pie filler" ng-if="!inBetweenQuestions"></div>
     <div class="mask" ng-if="!inBetweenQuestions"></div>
