--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -7,10 +7,10 @@
       <h2>Login</h2>
       <input name="username" type="text" placeholder="username" data-ng-model="user.username"/>
       <input name="password" type="password" placeholder="password" data-ng-model="user.password"/>
-      <input class="button" type="submit" value="Let's play now!"/>
+      <input class="button" type="submit" value="Play now!"/>
     </fieldset>
   </form>
-  <input data-ng-click="newUserSignup()" class="away-button" type="submit" value="create new account"/>
+  <input data-ng-click="newUserSignup()" class="away-button" type="submit" value="New user"/>
 </section>
 
 <section class="last-content" data-ng-if="newUser">
@@ -61,10 +61,10 @@
           </li>
         </ul>
       </fieldset>
-      <input class="button" type="submit" value="Add Player"/>
+      <input class="button" type="submit" value="Go!"/>
     </fieldset>
   </form>
-  <input data-ng-click="oldUserSignin()" class="away-button" type="submit" value="return to login"/>
+  <input data-ng-click="oldUserSignin()" class="away-button" type="submit" value="Back"/>
 </section>
 <footer>
   <ul>
