Add in blue avatar option

--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -47,6 +47,12 @@
               <img src="imgs/avatar4.svg">
             </label>
           </li>
+          <li class="slide-in-left">
+            <input name="avatar" type="radio" value="imgs/avatar5.svg" data-ng-model="user.avatar"/>
+            <label>
+              <img src="imgs/avatar5.svg">
+            </label>
+          </li>
           <li class="slide-in-right">
             <input name="avatar" type="radio" value="imgs/avatar6.svg" data-ng-model="user.avatar"/>
             <label>
