--- a/app/style/partials/_login-form.scss
+++ b/app/style/partials/_login-form.scss
@@ -35,7 +35,7 @@
     -webkit-transition: background-color 0.3s;
       transition: background-color 0.3s;  
     &:hover {
-      background: $background-color-theme;
+      background: $background-color-light;
     }
   }
   img {
