--- a/app/style/partials/_login-form.scss
+++ b/app/style/partials/_login-form.scss
@@ -69,6 +69,6 @@
     }
   }
   input[type="radio"]:checked + label {
-    background: $background-color-theme;
+    background: $background-color-light;
   }
 }
