Change slidein animation on green octo

--- a/app/templates/views/login_view.html
+++ b/app/templates/views/login_view.html
@@ -41,7 +41,7 @@
               <img src="imgs/avatar3.svg">
             </label>
           </li>
-          <li class="slide-in-left">
+          <li class="slide-in-up">
             <input name="avatar" type="radio" value="imgs/avatar4.svg" data-ng-model="user.avatar"/>
             <label>
               <img src="imgs/avatar4.svg">
