--- a/app/style/modules/_colors.scss
+++ b/app/style/modules/_colors.scss
@@ -1,11 +1,11 @@
 $color1: #1F1F1F;
 $color2: lighten($color1, 60%);
-$color3: #fff;
-$color4: #1CB2FF;
-$color5: #19FF40;
-$color6: #FF0000;
+$color3: #FFFFFF;
+$color4: #1CB2FF; // theme blue
+$color5: #19FF40; // green
+$color6: #FF0000; // red
 
-// avatar/mascot colors
+// avatar colors
 $avatar-color1: #FF0000; // red
 $avatar-color1: #FF5C0E; // orange
 $avatar-color1: #FFFF00; // yellow
