--- a/app/style/partials/_footer.scss
+++ b/app/style/partials/_footer.scss
@@ -1,3 +1,6 @@
+.last-content {
+  padding-bottom: 5em;
+}
 footer {
   @include set-font(rgba($text-color-theme, 0.5), $main-font-regular, $font-size-small);
   position: absolute;
@@ -7,11 +10,8 @@ footer {
   width: 50%;
   height: 5em;
   padding-top: 1em;
-  ul {
-    list-style-type: none;
-    text-align: center;
-    li {
+  text-align: center;
+  li {
       display: inline-block;
-    }
   }
 }
