--- a/app/style/partials/_login-form.scss
+++ b/app/style/partials/_login-form.scss
@@ -15,6 +15,22 @@
     background-color: $background-color-light;
     color: $text-color-theme;
   }
+  .button {
+    @include button($text-color-light, $background-color-theme, $border-color-med, $main-font-regular, $font-size-regular, $background-color-theme, $text-color-light, uppercase);
+    width: 50%;
+    margin-top: 1em;
+    &:focus {
+      -webkit-box-shadow: 1px 1px 10px 6px $background-color-theme;
+      -moz-box-shadow: 1px 1px 10px 6px $background-color-theme;
+        box-shadow: 1px 1px 10px 6px $background-color-theme;
+    }
+  }
+  .away-button {
+    @extend %navigate-away-button;
+    @include breaks(desktop) {
+      width: 40%
+    }
+  }
 }
 
 
