--- a/app/style/partials/_question-card.scss
+++ b/app/style/partials/_question-card.scss
@@ -1,24 +1,5 @@
 .q-card {
   position: relative;
-  margin: 1em auto 0 auto;
-  border: 3px solid $border-color-theme;
-  border-radius: 0.5em;
-  padding: 0.75em 5%;
-  width: 96%;
-  background-color: $background-color-light;
-  h1 {
-    @include set-font($text-color-dark, $main-font-regular, $font-size-jumbo, "auto");
-    text-align: center;
-    margin-bottom: 0.5em;
-    text-transform: capitalize;
-  }
-  h2 {
-    @include set-font($text-color-dark, $main-font-regular, $font-size-large, "auto");
-    margin-bottom: 0.35em;
-    padding-bottom: 0.35em;
-    text-align: center;
-    line-height: 1.5; 
-  }
   .answers {
     border-top: 1px solid rgba($border-color-dark, 0.5);
     padding-top: 1em;
@@ -35,10 +16,12 @@
     background-color: $background-color-correct;
     border-color: $border-color-correct;
   }
+  // upon wrong answer
   &.wrong {
     background-color: $background-color-wrong;
     border-color: $border-color-wrong;
   }
+  // upon timeout
   .wrong {
     background-color: $background-color-wrong;
     border-color: $border-color-wrong;
