--- a/app/style/partials/buttons/_small-button.scss
+++ b/app/style/partials/buttons/_small-button.scss
@@ -8,8 +8,8 @@
     -webkit-box-shadow: 1px 1px 10px 6px $background-color-theme;
     -moz-box-shadow: 1px 1px 10px 6px $background-color-theme;
       box-shadow: 1px 1px 10px 6px $background-color-theme;
-  }    
-}
-.small-button.current {
-  background-color: $background-color-med;
+  }
+  &.current {
+    background-color: $background-color-med;
+  }  
 }
