Finish refactor of card views

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -22,11 +22,11 @@
 @import "partials/score-card.scss";
 @import "partials/category-pick.scss";
 @import "partials/game-pick.scss";
-@import "partials/games-card.scss";
+// @import "partials/games-card.scss";
 @import "partials/rank-indicator.scss";
 @import "partials/player-profile.scss";
 // @import "partials/opponents-card.scss";
-@import "partials/individual-opponent-console.scss";
+// @import "partials/individual-opponent-console.scss";
 @import "partials/spinner.scss";
   // buttons
   @import "partials/buttons/button-wrap.scss";
