--- a/app/templates/views/gameplay_view.html
+++ b/app/templates/views/gameplay_view.html
@@ -1,7 +1,7 @@
 <header>
   <figure><img src="{{user.avatar}}"><figcaption>{{user.username}}</figcaption></figure>
 </header>
-<section id="q-card" class="q-card" data-ng-class="{'right': isRight, 'wrong': isWrong}">
+<section id="q-card" class="card q-card" data-ng-class="{'right': isRight, 'wrong': isWrong}">
   <div data-question-header
        data-category-header="categoryName"
        data-question="question"
