--- a/app/templates/views/home_view.html
+++ b/app/templates/views/home_view.html
@@ -2,7 +2,7 @@
   <h1 class="icon-avatar-bw">TriviApp</h1>
   <figure><img src="{{user.avatar}}"><figcaption>{{user.username}}</figcaption></figure>
 </header>
-<section class="card cat-card last-content">
+<section class="cat-card last-content">
   <ul>
     <li class="big-button" tabindex="1" data-ng-click="newGame('sports')">Sports</li>
     <li class="big-button" tabindex="2" data-ng-click="newGame('entertainment')">Entertainment</li>
