--- a/app/style/modules/_button.scss
+++ b/app/style/modules/_button.scss
@@ -30,8 +30,8 @@
 }
 
 %navigate-away-button {
-  @include button($text-color-light, $background-color-dark, $border-color-med, $main-font-light-italic, $font-size-regular, $background-color-dark, $text-color-light);
-  display: block;
+  @include button($text-color-dark, $background-color-light, $border-color-med, $main-font-light-italic, $font-size-regular, $background-color-light, $text-color-dark);
+  display: inline-block;
   margin: 0.25em auto;
   padding: 0.5em;
   width: 25%;
