--- a/app/templates/views/gameplay_view.html
+++ b/app/templates/views/gameplay_view.html
@@ -12,9 +12,9 @@
     <div class="mask" ng-if="!inBetweenQuestions"></div>
   </div>
   <div class="timer-space" ng-if="inBetweenQuestions"></div>
-  <div id="answers" class="answers">
-    <a data-ng-repeat="answer in answers" data-ng-click="checkAnswer(answer)" class="big-button" data-ng-class="{'chosen': isChosen, 'correct': isCorrect, 'incorrect': isIncorrect, 'animated':isAnimated, 'hinge': runHinge, 'rubberBand':runRubberBand}">{{answer}}</a>
-  </div>
+  <ul id="answers" class="answers">
+    <li data-ng-repeat="answer in answers" data-ng-click="checkAnswer(answer)" class="big-button" data-ng-class="{'chosen': isChosen, 'correct': isCorrect, 'incorrect': isIncorrect, 'animated':isAnimated, 'hinge': runHinge, 'rubberBand':runRubberBand}">{{answer}}</li>
+  </ul>
 </section>
 <div class="button-wrap last-content">
   <a class="small-button" href="#/signin">Quit</a>
