Build revised profile view with score displays

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -19,7 +19,7 @@
 @import "partials/answer-card.scss";
 @import "partials/score-card.scss";
 @import "partials/player-profile.scss";
-@import "partials/percentage-stars.scss";
+@import "partials/progress-bar.scss";
 @import "partials/spinner.scss";
   // buttons
   @import "partials/buttons/button-wrap.scss";
